# ai-loom

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CI_FIX_REPORT.md  Dockerfile  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_v0.10.0.md  VERIFICATION_README.md  analyze_verification.py  cleanup_report.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  final_cleanup_report.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  tox.ini  verification_report.json  verify_fixes.py  vscode_tabs_check_report.md
.github/workflows/: ci.yml
MAINTENANCE_PLAN/: index.html
PHASE2_DELIVERABLES_INVENTORY/: index.html
PHASE2_FINAL_DELIVERY_REPORT/: index.html
PHASE2_FIX_RECOMMENDATIONS/: index.html
PHASE2_INTEGRATION_TEST_REPORT/: index.html
PHASE2_QUALITY_AND_RISK_ASSESSMENT/: index.html
PHASE2_TECHNICAL_ACHIEVEMENTS_SUMMARY/: index.html
REFACTOR_BRANCH_STRATEGY/: index.html
canon/: fantasy_basic.md
config/: default_config.yaml  default_config.yaml.backup  llm_providers.yaml
data/: loom.db-shm  loom.db-wal
deploy/: deploy.sh
deploy/cloud/: aws-deploy.sh  azure-deploy.sh  gcp-deploy.sh
deployment/cloud-deployment/: index.html
deployment/deployment-guide/: index.html
deployment/docker-deployment/: index.html
deployment/local-deployment/: index.html
deployment/monitoring/: index.html
deployment/release-process/: index.html
deployment/troubleshooting/: index.html
deployment/upgrade-guide/: index.html
development/code-organization/: index.html
development/code-standards/: index.html
development/contributing/: index.html
development/debugging-guide/: index.html
development/extension-development/: index.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_USAGE.md  CONTRIBUTING.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCUMENTATION_VALIDATION.md  MAINTENANCE_PLAN.md  MIGRATION_v0.9_to_v0.10.md  PHASE2_DELIVERABLES_INVENTORY.md  PHASE2_FINAL_DELIVERY_REPORT.md  PHASE2_FIX_RECOMMENDATIONS.md  PHASE2_INTEGRATION_TEST_REPORT.md  PHASE2_QUALITY_AND_RISK_ASSESSMENT.md  PHASE2_TECHNICAL_ACHIEVEMENTS_SUMMARY.md  README.md  REFACTOR_BRANCH_STRATEGY.md  RELEASE_PROCESS.md  TEST_COVERAGE_REPORT.md  UPGRADE_GUIDE.md  USER_GUIDE.md  WORLD_BUILDING_GUIDE.md  index.md  mkdocs.yml
examples/: basic_world.md  deepseek_example.py  fantasy_setting.md  player_intervention_example.py  sci_fi_world.md
issues/: END_TO_END_TEST_ISSUES.md
kubernetes/: configmap.yaml  deploy-all.sh  deployment.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
plans/: PHASE1_POSITIONING_PLAN.md  PHASE2_EXECUTION_PLAN.md  PHASE2_PLAN.md  PHASE2_TECHNICAL_ARCHITECTURE.md  PHASE2_TECHNICAL_ARCHITECTURE_PART2.md  architecture.md  deepseek_architecture_diagram.md  deepseek_integration_plan.md  project.md  roadmap.md  不一致问题分类和优先级分析.md  分阶段修改计划.md  文档代码一致性改进路线图.md  文档代码一致性改进项目状态报告.md  文档代码一致性改进风险评估.md  文档代码一致性检查汇总.md  文档代码一致性预防机制设计.md
scripts/: deploy_verify.py  run_ci_local.py  test_component_imports.py  test_component_imports_fixed.py  test_component_imports_simple.py  test_enhanced_reasoning_integration.py  test_enhanced_reasoning_simple.py  test_performance_monitoring_integration.py  test_rule_components.py  test_rules_interpretation_integration.py  update_terminology.py  verify_enhanced_components.py  verify_enhanced_components_simple.py  verify_memory_components.py  verify_memory_simple.py  verify_performance_monitoring.py  verify_rule_enhancements.py  verify_rule_simple.py  verify_runtime.py  verify_terminology.py
scripts/deploy/: release.py  (+2 more)
search/: search_index.json
temp_backup/: search_config_list.py  test_input.txt
tests/: __init__.py
(+214 files in other folders)
